# securechain-mcp-server

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  mcp.json.template  pyproject.toml  requirements.txt  ruff.toml  template.env
.github/workflows/: github-release.yml  lint-test.yml  release.yml
app/: config.py  database.py  dependencies.py  main.py  mcp_server.py  middleware.py  settings.py
app/exceptions/: __init__.py  authentication_error_exception.py  cwe_not_found_exception.py  cwes_not_found_exception.py  exceptions.py  exploit_not_found_exception.py  exploits_not_found_exception.py  package_not_found_exception.py  tixs_not_found_exception.py  version_not_found_exception.py  vexs_not_found_exception.py  vulnerabilities_not_found_exception.py  vulnerability_not_found_exception.py
app/logics/: __init__.py  graph_logic.py  vex_logic.py  vex_tix_logic.py
app/services/: __init__.py  cwe_service.py  exploit_service.py  tix_service.py  vex_service.py  vulnerability_service.py
app/services/dbs/: databases.py
app/tools/: __init__.py  cwe_tool.py  exploit_tool.py  graph_tool.py  tix_tool.py  vex_tool.py  vulnerability_tool.py
app/utils/: __init__.py  json_encoder.py  request_context.py  session_manager.py  session_pool.py
app/utils/auth/: __init__.py  get_auth.py  request_context.py  session_manager.py
app/utils/logics/: __init__.py  graph_logic.py  vex_logic.py
app/utils/others/: __init__.py  as_text_content.py
dev/: Dockerfile  docker-compose.yml
